// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block sagas deleteRSVPHeaderImage should delete rsvp header image 1`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [],
    "context": {
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`RSVP block sagas deleteRSVPHeaderImage should not delete rsvp header image 1`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [],
    "context": {
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`RSVP block sagas initializeRSVP should initialize state from datetime block 1`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [
      "date",
    ],
    "context": {
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`RSVP block sagas initializeRSVP should initialize state from datetime block 2`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [
      "January 1, 2018",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`RSVP block sagas initializeRSVP should initialize state from datetime block 3`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [
      "January 4, 2018",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`RSVP block sagas saveRSVPWithPostSave should update when channel saves 1`] = `
{
  "@@redux-saga/IO": true,
  "ALL": {
    "capacity": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "description": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "endDate": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "endDateInput": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "endDateMoment": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "endTime": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "id": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "notGoingResponses": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "startDate": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "startDateInput": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "startDateMoment": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "startTime": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
    "title": {
      "@@redux-saga/IO": true,
      "SELECT": {
        "args": [],
        "selector": [Function],
      },
    },
  },
}
`;

exports[`RSVP block sagas saveRSVPWithPostSave should update when channel saves 2`] = `
{
  "@@redux-saga/IO": true,
  "PUT": {
    "action": [Function],
    "channel": null,
  },
}
`;

exports[`RSVP block sagas setNonEventPostTypeEndDate should set end date 1`] = `
{
  "@@redux-saga/IO": true,
  "ALL": [
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDate": "2018-01-01",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_DATE",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateInput": "2018-01-01",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_DATE_INPUT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateMoment": "2018-01-01",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_DATE_MOMENT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endTime": "12:00:00",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_TIME",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDate": "2018-01-01",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_DATE",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateInput": "2018-01-01",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_DATE_INPUT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateMoment": "2018-01-01",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_DATE_MOMENT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endTime": "12:00:00",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_TIME",
        },
        "channel": null,
      },
    },
  ],
}
`;

exports[`RSVP block sagas syncRSVPSaleEndWithEventStart should not sync 1`] = `
{
  "@@redux-saga/IO": true,
  "ALL": [
    {
      "@@redux-saga/IO": true,
      "CALL": {
        "args": [],
        "context": {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    {
      "@@redux-saga/IO": true,
      "CALL": {
        "args": [],
        "context": {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    {
      "@@redux-saga/IO": true,
      "CALL": {
        "args": [],
        "context": {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
  ],
}
`;

exports[`RSVP block sagas syncRSVPSaleEndWithEventStart should not sync 2`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [
      {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`RSVP block sagas syncRSVPSaleEndWithEventStart should not sync 3`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [
      {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`RSVP block sagas syncRSVPSaleEndWithEventStart should sync 1`] = `
{
  "@@redux-saga/IO": true,
  "ALL": [
    {
      "@@redux-saga/IO": true,
      "CALL": {
        "args": [],
        "context": {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    {
      "@@redux-saga/IO": true,
      "CALL": {
        "args": [],
        "context": {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    {
      "@@redux-saga/IO": true,
      "CALL": {
        "args": [],
        "context": {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
  ],
}
`;

exports[`RSVP block sagas syncRSVPSaleEndWithEventStart should sync 2`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [
      {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`RSVP block sagas syncRSVPSaleEndWithEventStart should sync 3`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [
      {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`RSVP block sagas syncRSVPSaleEndWithEventStart should sync 4`] = `
{
  "@@redux-saga/IO": true,
  "ALL": [
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDate": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_DATE",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateInput": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_DATE_INPUT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateMoment": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_DATE_MOMENT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endTime": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_TIME",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endTimeInput": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_RSVP_TEMP_END_TIME_INPUT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDate": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_DATE",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateInput": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_DATE_INPUT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endDateMoment": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_DATE_MOMENT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endTime": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_TIME",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "endTimeInput": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_RSVP_END_TIME_INPUT",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "PUT": {
        "action": {
          "payload": {
            "hasChanges": true,
          },
          "type": "@@MT/TICKETS/SET_RSVP_HAS_CHANGES",
        },
        "channel": null,
      },
    },
    {
      "@@redux-saga/IO": true,
      "CALL": {
        "args": [],
        "context": null,
        "fn": [Function],
      },
    },
  ],
}
`;

exports[`RSVP block sagas updateRSVPHeaderImage should not update rsvp header image 1`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [],
    "context": {
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`RSVP block sagas updateRSVPHeaderImage should update rsvp header image 1`] = `
{
  "@@redux-saga/IO": true,
  "CALL": {
    "args": [],
    "context": {
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;
